<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/choice1"
        android:title="@string/search"
        android:orderInCategory="1"
        android:icon="@drawable/search"
        app:showAsAction="always"/>
    <item
        android:id="@+id/choice2"
        android:title="@string/favorites"
        android:orderInCategory="2"
        android:icon="@drawable/favorite"
        app:showAsAction="always"/>
    <item
        android:id="@+id/choice3"
        android:title="@string/recommended"
        android:orderInCategory="3"
        android:icon="@drawable/recommended"
        app:showAsAction="always"/>
    <item
        android:id="@+id/choice4"
        android:title="@string/deleted"
        android:orderInCategory="4"
        android:icon="@drawable/trash"
        app:showAsAction="always"/>
    <item
        android:id="@+id/helpChoice"
        android:title="@string/help"
        android:orderInCategory="5"
        app:showAsAction="always"/>

</menu>